force-app/main/default/objects/Valeur_Annuelle__mdt/Valeur_Annuelle__mdt.object-meta.xml
<CustomObject>
    <label>Valeur Annuelle</label>
    <pluralLabel>Valeurs Annuelles</pluralLabel>
</CustomObject>