force-app/main/default/objects/Valeur_Annuelle__mdt/fields/CSPE_PuissanceInfOuEgal36Kva__c.field-meta.xml
<CustomField>
    <fullName>CSPE_PuissanceInfOuEgal36Kva__c</fullName>
    <label>CSPE_PuissanceInfOuEgal36Kva</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>