force-app/main/default/objects/Valeur_Annuelle__mdt/fields/CSPE_PuissanceSup36OuEgal250__c.field-meta.xml
<CustomField>
    <fullName>CSPE_PuissanceSup36OuEgal250__c</fullName>
    <label>CSPE_PuissanceSup36OuEgal250</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>