force-app/main/default/objects/Valeur_Annuelle__mdt/fields/CTA_T1__c.field-meta.xml
<CustomField>
    <fullName>CTA_T1__c</fullName>
    <label>CTA T1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>