force-app/main/default/objects/Valeur_Annuelle__mdt/fields/CTA_T2__c.field-meta.xml
<CustomField>
    <fullName>CTA_T2__c</fullName>
    <label>CTA T2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>