force-app/main/default/objects/Valeur_Annuelle__mdt/fields/Frais_Transport_Distribution_Capacite_T1__c.field-meta.xml
<CustomField>
    <fullName>Frais_Transport_Distribution_Capacite_T1__c</fullName>
    <label>Frais Transport Distribution Capacite T1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>