force-app/main/default/objects/Valeur_Annuelle__mdt/fields/Frais_Transport_Distribution_Capacite_T2__c.field-meta.xml
<CustomField>
    <fullName>Frais_Transport_Distribution_Capacite_T2__c</fullName>
    <label>Frais Transport Distribution Capacite T2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>