force-app/main/default/objects/Valeur_Annuelle__mdt/fields/TICGN__c.field-meta.xml
<CustomField>
    <fullName>TICGN__c</fullName>
    <label>TICGN</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>