force-app/main/default/objects/Valeur_Annuelle__mdt/fields/TVA1__c.field-meta.xml
<CustomField>
    <fullName>TVA1__c</fullName>
    <label>TVA1</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>