force-app/main/default/objects/Valeur_Annuelle__mdt/fields/TVA2__c.field-meta.xml
<CustomField>
    <fullName>TVA2__c</fullName>
    <label>TVA2</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>